--- a/Hemuppgift_WPFtemplate/MainWindow.xaml
+++ b/Hemuppgift_WPFtemplate/MainWindow.xaml
@@ -7,6 +7,20 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+
+        <Button Grid.Row="0" Content="Grid" Click="OpenGridWindow" />
+        <Button Grid.Row="0" Content="StackPanel" Grid.Column="1" Click="OpenStackPanelWindow"/>
+        <Button Grid.Row="1" Content="WrapPanel" Click="OpenWrapPanelWindow"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="DockPanel" Click="OpenDockPanelWindow"/>
 
     </Grid>
 </Window>
